<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".PayementActivity">
    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:id="@+id/rl_app_title"
        android:padding="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/payement"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:textSize="40sp"
        android:fontFamily="@font/dancing_script_variable_font_wght"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/rl_app_second_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_app_title">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sub_title"
            android:textColor="@color/green"
            android:fontFamily="@font/dancing_script_variable_font_wght"
            android:textSize="20sp"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/rl_app_choice"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/rl_app_second_title">

        <RadioGroup
            android:id="@+id/radioGroup_character"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

                <RadioButton
                    android:id="@+id/radioButton_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/green"
                    android:padding="10dp"
                    android:text="@string/rb_online" />

                <RadioButton
                    android:id="@+id/radioButton_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/green"
                    android:text="@string/rb_cash" />



        </RadioGroup>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_submit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rectangle_green_200"
        app:layout_constraintTop_toBottomOf="@+id/rl_app_choice"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_valider"
            android:textStyle="bold"
            android:textSize="28sp"
            android:fontFamily="@font/dancing_script_variable_font_wght"
            android:layout_centerInParent="true"
            android:textColor="@color/white"/>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>