<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PlantsActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:text="hauteur de plants"
                android:layout_height="60dp"
                android:textColor="@color/green"
                android:textSize="80px"
                />
            <EditText
                style="@style/edt_hauteur"/>


            <TextView
                android:id="@+id/t1"
                android:text="@string/cayegorie1"
                style="@style/txt_view"
                tools:ignore="MissingConstraints" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/produit_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:nestedScrollingEnabled="false"
                />



            <TextView
                android:layout_marginTop="10px"
                android:layout_width="match_parent"
                android:id="@+id/t2"
                android:layout_height="60dp"
                android:textColor="@color/green"
                android:text="Pots"
                android:textSize="30dp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_marginTop="100px"
                app:layout_constraintBaseline_toBottomOf="@id/t1"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="191dp"

                        android:orientation="vertical">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            app:cornerRadius="8dp"
                            android:layout_margin="10px"
                            android:contentDescription="my_image_description"
                            android:outlineAmbientShadowColor="@color/green"
                            app:shapeAppearanceOverlay="@style/circular"
                            app:strokeColor="@color/gray"
                            app:strokeWidth="5dp"
                            android:src="@drawable/p4" />

                        <TextView
                            style="@style/txt_view_choix"
                            android:text="@string/choix_pot_1"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="191dp"

                        android:orientation="vertical">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            app:cornerRadius="8dp"
                            android:layout_margin="10px"
                            android:contentDescription="my_image_description"
                            android:outlineAmbientShadowColor="@color/green"
                            app:shapeAppearanceOverlay="@style/circular"
                            app:strokeColor="@color/gray"
                            app:strokeWidth="5dp"
                            android:src="@drawable/p3" />

                        <TextView
                            style="@style/txt_view_choix"
                            android:text="@string/choix_pot_2"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="191dp"

                        android:orientation="vertical">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            app:cornerRadius="8dp"
                            android:layout_margin="10px"
                            android:contentDescription="my_image_description"
                            android:outlineAmbientShadowColor="@color/green"
                            app:shapeAppearanceOverlay="@style/circular"
                            app:strokeColor="@color/gray"
                            app:strokeWidth="5dp"
                            android:src="@drawable/p5" />

                        <TextView
                            style="@style/txt_view_choix"
                            android:text="@string/choix_pot_3"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="191dp"

                        android:orientation="vertical">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            app:cornerRadius="8dp"
                            android:layout_margin="10px"
                            android:contentDescription="my_image_description"
                            android:outlineAmbientShadowColor="@color/green"
                            app:shapeAppearanceOverlay="@style/circular"
                            app:strokeColor="@color/gray"
                            app:strokeWidth="5dp"
                            android:src="@drawable/p2" />

                        <TextView
                            style="@style/txt_view_choix"
                            android:text="@string/choi_pot_4"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="191dp"

                        android:orientation="vertical">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            app:cornerRadius="8dp"
                            android:layout_margin="10px"
                            android:contentDescription="my_image_description"
                            android:outlineAmbientShadowColor="@color/green"
                            app:shapeAppearanceOverlay="@style/circular"
                            app:strokeColor="@color/gray"
                            app:strokeWidth="5dp"
                            android:src="@drawable/p1" />

                        <TextView
                            style="@style/txt_view_choix"
                            android:text="@string/choix_pot_5"
                            />
                    </LinearLayout>


                </LinearLayout>
            </HorizontalScrollView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>