<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FlowersActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Spinner
                android:id="@+id/mois"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/colors"
                android:layout_marginTop="100px"
                />
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_marginTop="50px"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">


                <CheckBox android:id="@+id/checkbox_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Small"
                    />
                <CheckBox android:id="@+id/checkbox_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Medium" />
                <CheckBox android:id="@+id/checkbox_big"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Medium" />
            </LinearLayout>

            <TextView
                android:id="@+id/t1"
                android:text="@string/choix_flowers_2"
                style="@style/txt_view"
                tools:ignore="MissingConstraints" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/produit_recyclerview2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:nestedScrollingEnabled="false"
                />


            <TextView
                android:id="@+id/t2"
                android:text="@string/choix_flowers_1"
                style="@style/txt_view"
                tools:ignore="MissingConstraints" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/produit_recyclerview_support"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:nestedScrollingEnabled="false"
                />
            <RelativeLayout
                android:id="@+id/rl_submit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:layout_margin="30dp"
                android:background="@drawable/rectangle_green_200"
                app:layout_constraintTop_toBottomOf="@+id/produit_recyclerview_support"
                >
                <TextView
                    android:id="@+id/a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_buy"
                    android:textStyle="bold"
                    android:textSize="28sp"
                    android:fontFamily="@font/dancing_script_variable_font_wght"
                    android:layout_centerInParent="true"
                    android:textColor="@color/white"/>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>